changing to virtual threads scenario10